--- a/main/templates/main/post_detail.html
+++ b/main/templates/main/post_detail.html
@@ -6,26 +6,23 @@
 
 {% block content %}
 <main>
-    {% if blog_user.blog_title %}
-    <a href="{% url 'index' %}" class="posts-item-brand">{{ blog_user.blog_title }}</a>
-    {% endif %}
-
     <article itemscope itemtype="http://schema.org/BlogPosting">
-        <h1 class="posts-item-title" itemprop="name headline">{{ post.title }}</h1>
-
-        <div class="posts-item-byline">
+        <header>
+          <h1>{{ post.title }}</h1>
+          <p>
             {% if post.published_at and post.is_published %}
-            Published on <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'F j, Y' }}</time>
+            <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'j F Y' }}</time>
             {% elif post.published_at and not post.is_published %}
-            SCHEDULED for <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'F j, Y' }}</time>
+            SCHEDULED for <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'j F Y' }}</time>
             {% else %}
-            DRAFT — Last updated on <time datetime="{{ post.updated_at|date:'Y-m-d' }}" itemprop="dateModified">{{ post.updated_at|date:'F j, Y' }}</time>
+            DRAFT — Last updated on <time datetime="{{ post.updated_at|date:'Y-m-d' }}" itemprop="dateModified">{{ post.updated_at|date:'j F Y' }}</time>
             {% endif %}
             {% if request.user.is_authenticated and request.subdomain == request.user.username %}
             | <a href="{% url 'post_update' post.slug %}">Edit post</a>
-            | <a href="{% url 'post_delete' post.slug %}">Del</a>
+            | <a href="{% url 'post_delete' post.slug %}">Delete</a>
             {% endif %}
-        </div>
+          </p>
+        </header>
 
         <div class="posts-item-body" itemprop="articleBody">
             {{ post.body_as_html|safe }}
