--- a/main/templates/main/image_detail.html
+++ b/main/templates/main/image_detail.html
@@ -4,14 +4,17 @@
 
 {% block content %}
 <main>
-    <h1>{{ image.name }}</h1>
-
-    <div class="images-item-byline">
-        <a class="images-item-back" href="{% url 'image_list' %}">« all images</a>
-        — Uploaded on <time datetime="{{ image.uploaded_at|date:'Y-m-d' }}">{{ image.uploaded_at|date:'d M Y' }}</time>
-        | <a href="{% url 'image_update' image.slug %}">Edit image</a>
-        | <a href="{% url 'image_delete' image.slug %}">Delete</a>
-    </div>
+    <article>
+        <header>
+            <a class="images-item-back" href="{% url 'image_list' %}">« all images</a>
+            <h1>{{ image.name }}</h1>
+            <p>
+            Uploaded on <time datetime="{{ image.uploaded_at|date:'Y-m-d' }}">{{ image.uploaded_at|date:'d M Y' }}</time>
+            | <a href="{% url 'image_update' image.slug %}">Edit image</a>
+            | <a href="{% url 'image_delete' image.slug %}">Delete</a>
+            </p>
+        </header>
+    </article>
 
     <p>
         Use markdown syntax to add this image in a post:
