--- a/main/templates/main/landing.html
+++ b/main/templates/main/landing.html
@@ -7,7 +7,7 @@
     <h1>{{ instance_name }}</h1>
     <p>{{ instance_description }}</p>
 
-    <img src="static/capybara.jpg" alt="A capybara." style="display: inline"/>
+    <img src="static/capybara.jpg" alt="A capybara." style="display: inline" width="100"/>
 
     <hr>
     <h2>Latest Posts</h2>
