--- a/main/templates/main/analytic_list.html
+++ b/main/templates/main/analytic_list.html
@@ -10,6 +10,7 @@
     </p>
     <ul>
         <li><a href="{% url 'analytic_page_detail' 'index' %}">index</a></li>
+        <li><a href="{% url 'analytic_page_detail' 'atom' %}">atom</a></li>
         <li><a href="{% url 'analytic_page_detail' 'rss' %}">rss</a></li>
         {% for page in page_list %}
         <li><a href="{% url 'analytic_page_detail' page.slug %}">{{ page.slug }}</a></li>
