--- a/main/templates/assets/style.css
+++ b/main/templates/assets/style.css
@@ -13,8 +13,10 @@
     --dark-grey-color: #757575;
     --light-grey-color: #eff1f5;
     --airy-grey-color: #fafafa;
-    --green-color: #26bd60;
-    --red-color: #ff0000;
+    --green-color: rgb(32, 172, 85);
+    --lighter-green-color: rgb(38, 189, 96, 0.05);
+    --red-color: rgb(255, 0, 0);
+    --lighter-red-color: rgb(255, 0, 0, 0.05);
     --purple-color: #cd1ecd;
 }
 
@@ -32,6 +34,10 @@
         --light-grey-color: #353535;
         --airy-grey-color: #2b2b2b;
         --purple-color: #dd47ec;
+        --green-color: rgb(51 223 114);
+        --lighter-green-color: rgb(51, 223, 114, 0.05);
+        --red-color: rgb(255, 31, 31);
+        --lighter-red-color: rgb(255, 31, 31, 0.1)
     }
 }
 
@@ -974,12 +980,26 @@ pre .c, pre .c1, pre .cm {
     }
 }
 
-pre .k, pre .kd, pre .kn, pre .kr, pre .nt, pre .nb {
+pre .gd {
+    color: var(--red-color);
+    background-color: var(--lighter-red-color);
+}
+
+pre .gi {
+    color: var(--green-color);
+    background-color: var(--lighter-green-color);
+}
+
+pre .gu {
+    color: var(--purple-color);
+}
+
+pre .k, pre .kd, pre .kn, pre .kr, pre .nt, pre .nb, pre .gh {
     color: #008;
 }
 
 @media (prefers-color-scheme: dark) {
-    pre .k, pre .kd, pre .kn, pre .kr, pre .nt, pre .nb {
+    pre .k, pre .kd, pre .kn, pre .kr, pre .nt, pre .nb, pre .gh {
         color: #69f;
     }
 }
