--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -80,6 +80,9 @@
         {% block content %}
         {% endblock %}
 
+        {% block footer %}
+        {% endblock %}
+
         {% block scripts %}
         {% endblock %}
     </body>
