--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -22,6 +22,7 @@
 
         <style>
             {% include 'assets/style.css' %}
+            {% include 'assets/highlight.css' %}
         </style>
     </head>
 
