--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -37,7 +37,7 @@
     <div class="dashboard-list">
         <a href="{% url 'user_update' %}">Blog settings</a>
         <br><a href="{% url 'password_change' %}">Change password</a>
-        <br><a href="mailto:admin@mataroa.blog">Help and support</a>
+        <br><a href="mailto:admin@capivaras.dev">Help and support</a>
         <br>
         <form method="post" action="{% url 'logout' %}" class="form-inline">
             {% csrf_token %}
