--- a/main/templates/403.html
+++ b/main/templates/403.html
@@ -7,11 +7,11 @@
     <h1>403</h1>
     <h2>Permission Denied</h2>
     <p>Looks like you tried to do something you're not allowed to. Oops?</p>
-    <p>Go <a href="#" onclick="history.back();">back</a> or return to the <a href="{% url 'index' %}">homepage</a>.</p>
+    <p><a href="#" onclick="history.back();">← Go back</a> or return to the <a href="{% url 'index' %}">homepage</a>.</p>
 </main>
 
-{% include 'partials/webring.html' %}
+{% include 'partials/error_webring.html' %}
 
-{% include 'partials/footer_blog.html' %}
+{% include 'partials/error_footer_blog.html' %}
 
 {% endblock %}
