--- a/main/templates/500.html
+++ b/main/templates/500.html
@@ -7,11 +7,11 @@
     <h1>500</h1>
     <h2>Internal Server Error</h2>
     <p>An error occurred processing your request. That's all we know.</p>
-    <p>Go <a href="#" onclick="history.back();">back</a> or return to the <a href="{% url 'index' %}">homepage</a>.</p>
+    <p><a href="#" onclick="history.back();">← Go back</a> or return to the <a href="{% url 'index' %}">homepage</a>.</p>
 </main>
 
-{% include 'partials/webring.html' %}
+{% include 'partials/error_webring.html' %}
 
-{% include 'partials/footer_blog.html' %}
+{% include 'partials/error_footer_blog.html' %}
 
 {% endblock %}
