--- a/main/templates/main/post_detail.html
+++ b/main/templates/main/post_detail.html
@@ -19,7 +19,7 @@
             {% endif %}
             {% if request.user.is_authenticated and request.subdomain == request.user.username %}
             | <a href="{% url 'post_update' post.slug %}">Edit post</a>
-            | <a href="{% url 'post_delete' post.slug %}">Delete</a>
+            | <a href="{% url 'post_delete' post.slug %}" class="type-delete">Delete</a>
             {% endif %}
           </p>
         </header>
