--- a/main/templates/assets/style.css
+++ b/main/templates/assets/style.css
@@ -321,11 +321,15 @@ a:hover {
 .page-list {
     list-style-type: none;
     padding: unset;
-}
 
-.page-list li {
-    /*display: flex;*/
-    margin-bottom: calc(var(--component-padding) / 2);
+    & h3 {
+        margin-top: 1rem;
+        margin-bottom: 0;
+    }
+
+    & li {
+        margin-bottom: calc(var(--component-padding) / 2);
+    }
 }
 
 code {
